--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
         <div class="logo"><img src="images\logo\ohmyfood.png" alt=""></div>
     </header>
 
+    <div class="zone">
+        <i class="fas fa-map-marker-alt"></i>
+        <input type="search" placeholder="Paris, Belleville">
+    </div>
+
     <section class="accroche">
-        <input type="text">
         <div class="accrocheText">
             <h1>Réservez le menu qui vous convient</h1>
             <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
@@ -44,8 +48,9 @@
         <div class="cards">
 
             <div class="cardResto">
-                <img src="images\restaurants\jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
                 <span>Nouveau</span>
+                <img src="images\restaurants\jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+                
                 <div class="info">
                     <div class="infoResto">
                         <h3>La palette du goût</h3>
@@ -58,8 +63,9 @@
             </div>
 
             <div class="cardResto">
-                <img src="images\restaurants\stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
                 <span>Nouveau</span>
+                <img src="images\restaurants\stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
+                
                 <div class="info">
                     <div class="infoResto">
                         <h3>La note enchantée</h3>
