--- a/la_note_enchantée.html
+++ b/la_note_enchantée.html
@@ -3,27 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
-    <title>La palette du goût</title>
+    <title>La note echantée</title>
 </head>
-<body>
+<body class="bodyMenu">
     <header>
-        <div class="logo"><img src="images\logo\ohmyfood.png" alt=""></div>
+        <div class="logo">
+            <a href="index.html">
+                <i class="fas fa-arrow-left"></i> 
+            </a>
+                <img src="images\logo\ohmyfood.png" alt="">
+        </div>
     </header>
-    <img src="images\restaurants\jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+        <img class="imgMenu" src="images\restaurants\jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
 
     <section class="menu">
 
-        <h1>La palette du goût<i class="far fa-heart heart"></i></h1>
+        <h1>La note enchantée<i class="far fa-heart heart"></i></h1>
 
         <div class="entrees">
             <h2>ENTRÉES</h2>
 
-            <div class="blocEnt">
+            <div class="blocs">
 
                 <div class="bloc">
-                    <h3>Fricassée d'escargot</h3>
-                    <p>Au piment d'espelette</p>
+                    <div class="infoPlat">
+                        <h3>Ravioles de foie gras</h3>
+                        <p>Accompagnés de leur crème à la truffe</p>
+                    </div>
                     <div class="prixAnim">
                         <span>25€</span>
                         <i class="fas fa-check-circle"></i>
@@ -31,8 +43,10 @@
                 </div>
 
                 <div class="bloc">
-                    <h3>Foie gras de canard mi-cuit</h3>
-                    <p>Et ses copeaux de truffe noire</p>
+                    <div class="infoPlat">
+                        <h3>Caviar osciètre</h3>
+                        <p>Sur bini à la farine de blé noir</p>
+                    </div>
                     <div class="prixAnim">
                         <span>35€</span>
                         <i class="fas fa-check-circle"></i>
@@ -40,10 +54,23 @@
                 </div>
 
                 <div class="bloc">
-                    <h3>Oeuf au plat</h3>
-                    <p>Assaisonné à la truffe sur lit de caviar</p>
+                    <div class="infoPlat">
+                        <h3>Homard et espuma de potirons</h3>
+                        <p>Mariné aux zests d'orange</p>
+                    </div>
                     <div class="prixAnim">
                         <span>20€</span>
+                        <i class="fas fa-check-circle"></i>
+                    </div>
+                </div>
+
+                <div class="bloc">
+                    <div class="infoPlat">
+                        <h3>Foie gras de canard cuit entier</h3>
+                        <p>Confiture de figure et pain toasté</p>
+                    </div>
+                    <div class="prixAnim">
+                        <span>35€</span>
                         <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
@@ -55,11 +82,13 @@
         <div class="plats">
             <h2>PLATS</h2>
 
-            <div class="blocPlat">
+            <div class="blocs">
 
                 <div class="bloc">
-                    <h3>Filet de boeuf aux herbes</h3>
-                    <p>Accompagné de sa ribambelle de légumes</p>
+                    <div class="infoPlat">
+                        <h3>Noix de coquilles Saint-Jacques</h3>
+                        <p>Sur lit de purée de céleri-rave</p>
+                    </div>
                     <div class="prixAnim">
                         <span>40€</span>
                         <i class="fas fa-check-circle"></i>
@@ -67,8 +96,10 @@
                 </div>
 
                 <div class="bloc">
-                    <h3>Parmentier de queue de boeuf</h3>
-                    <p>A la truffe noire sur sa purée de panais</p>
+                    <div class="infoPlat">
+                        <h3>langoustine poêlée</h3>
+                        <p>Purée de patate douce</p>
+                    </div>
                     <div class="prixAnim">
                         <span>35€</span>
                         <i class="fas fa-check-circle"></i>
@@ -76,8 +107,10 @@
                 </div>
 
                 <div class="bloc">
-                    <h3>Filet de turbot</h3>
-                    <p>Aux agrumes</p>
+                    <div class="infoPlat">
+                        <h3>Mijoté de queue de boeuf</h3>
+                        <p>Et riz sauvage aux zests de citron</p>
+                    </div>
                     <div class="prixAnim">
                         <span>44€</span>
                         <i class="fas fa-check-circle"></i>
@@ -90,11 +123,13 @@
         <div class="desserts">
             <h2>DESSERTS</h2>
 
-            <div class="blocDessr">
+            <div class="blocs">
 
                 <div class="bloc">
-                    <h3>Paris-Brest</h3>
-                    <p>Revisité</p>
+                    <div class="infoPlat">
+                        <h3>Macaron noisette et chocolat</h3>
+                        <p>Glace au caramel brun et sel de Guérande</p>
+                    </div>
                     <div class="prixAnim">
                         <span>18€</span>
                         <i class="fas fa-check-circle"></i>
@@ -102,8 +137,10 @@
                 </div>
 
                 <div class="bloc">
-                    <h3>Macaron au chocolat d'exception</h3>
-                    <p>Et glace à la vanille de Madagascar</p>
+                    <div class="infoPlat">
+                        <h3>Baba au rhum revisité</h3>
+                        <p>Avec son coulis de citron</p>
+                    </div>
                     <div class="prixAnim">
                         <span>22€</span>
                         <i class="fas fa-check-circle"></i>
@@ -111,8 +148,10 @@
                 </div>
 
                 <div class="bloc">
-                    <h3>Mousse au chocolat</h3>
-                    <p>Au piment d'espelette et à la truffe noire</p>
+                    <div class="infoPlat">
+                        <h3>Tarte au citron meringuée</h3>
+                        <p>Destructurée</p>
+                    </div>
                     <div class="prixAnim">
                         <span>23€</span>
                         <i class="fas fa-check-circle"></i>
@@ -122,7 +161,9 @@
             </div>
         </div>
 
-        <button>Commander</button>
+        <div class="commande">
+            <button>Commander</button>
+        </div>
     </section>
 
     <footer>
