--- a/le_délice_des_sens.html
+++ b/le_délice_des_sens.html
@@ -3,14 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
     <title>Le délice des sens</title>
 </head>
-<body>
+<body class="bodyMenu">
     <header>
-        <div class="logo"><img src="images\logo\ohmyfood.png" alt=""></div>
+        <div class="logo">
+            <a href="index.html">
+                <i class="fas fa-arrow-left"></i> 
+            </a>
+                <img src="images\logo\ohmyfood.png" alt="">
+        </div>
     </header>
-    <img src="images\restaurants\jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+        <img class="imgMenu" src="images\restaurants\jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
 
     <section class="menu">
 
@@ -19,11 +29,13 @@
         <div class="entrees">
             <h2>ENTRÉES</h2>
 
-            <div class="blocEnt">
+            <div class="blocs">
 
                 <div class="bloc">
-                    <h3>Tartare de thon</h3>
-                    <p>Assaisonnée au yuzu</p>
+                    <div class="infoPlat">
+                        <h3>Tartare de thon</h3>
+                        <p>Assaisonnée au yuzu</p>
+                    </div>
                     <div class="prixAnim">
                         <span>25€</span>
                         <i class="fas fa-check-circle"></i>
@@ -31,8 +43,10 @@
                 </div>
 
                 <div class="bloc">
-                    <h3>Bouchée de homard croustillant</h3>
-                    <p>Et sa farandole de petits légumes</p>
+                    <div class="infoPlat">
+                        <h3>Bouchée de homard croustillant</h3>
+                        <p>Et sa farandole de petits légumes</p>
+                    </div>
                     <div class="prixAnim">
                         <span>35€</span>
                         <i class="fas fa-check-circle"></i>
@@ -40,8 +54,10 @@
                 </div>
 
                 <div class="bloc">
-                    <h3>Velouté de cèpes</h3>
-                    <p>AAux truffes</p>
+                    <div class="infoPlat">
+                        <h3>Velouté de cèpes</h3>
+                        <p>AAux truffes</p>
+                    </div>
                     <div class="prixAnim">
                         <span>20€</span>
                         <i class="fas fa-check-circle"></i>
@@ -55,11 +71,13 @@
         <div class="plats">
             <h2>PLATS</h2>
 
-            <div class="blocPlat">
+            <div class="blocs">
 
                 <div class="bloc">
-                    <h3>Poulet rôti aux herbes de provence</h3>
-                    <p>Et sa crème de truffe</p>
+                    <div class="infoPlat">
+                        <h3>Poulet rôti aux herbes de provence</h3>
+                        <p>Et sa crème de truffe</p>
+                    </div>
                     <div class="prixAnim">
                         <span>40€</span>
                         <i class="fas fa-check-circle"></i>
@@ -67,8 +85,10 @@
                 </div>
 
                 <div class="bloc">
-                    <h3>Langouste rôtie</h3>
-                    <p>Et ses légumes de saison</p>
+                    <div class="infoPlat">
+                        <h3>Langouste rôtie</h3>
+                        <p>Et ses légumes de saison</p>
+                    </div>
                     <div class="prixAnim">
                         <span>35€</span>
                         <i class="fas fa-check-circle"></i>
@@ -76,8 +96,10 @@
                 </div>
 
                 <div class="bloc">
-                    <h3>Côte de boeuf angus</h3>
-                    <p>Et sa purée de panais</p>
+                    <div class="infoPlat">
+                        <h3>Côte de boeuf angus</h3>
+                        <p>Et sa purée de panais</p>
+                    </div>
                     <div class="prixAnim">
                         <span>44€</span>
                         <i class="fas fa-check-circle"></i>
@@ -90,11 +112,13 @@
         <div class="desserts">
             <h2>DESSERTS</h2>
 
-            <div class="blocDessr">
+            <div class="blocs">
 
                 <div class="bloc">
-                    <h3>Farandole de desserts</h3>
-                    <p>Du chef</p>
+                    <div class="infoPlat">
+                        <h3>Farandole de desserts</h3>
+                        <p>Du chef</p>
+                    </div>
                     <div class="prixAnim">
                         <span>18€</span>
                         <i class="fas fa-check-circle"></i>
@@ -102,8 +126,10 @@
                 </div>
 
                 <div class="bloc">
-                    <h3>Crème brûlée</h3>
-                    <p>Revisitée</p>
+                    <div class="infoPlat">
+                        <h3>Crème brûlée</h3>
+                        <p>Revisitée</p>
+                    </div>
                     <div class="prixAnim">
                         <span>22€</span>
                         <i class="fas fa-check-circle"></i>
@@ -111,8 +137,10 @@
                 </div>
 
                 <div class="bloc">
-                    <h3>Tiramisu</h3>
-                    <p>A la noisette</p>
+                    <div class="infoPlat">
+                        <h3>Tiramisu</h3>
+                        <p>A la noisette</p>
+                    </div>
                     <div class="prixAnim">
                         <span>23€</span>
                         <i class="fas fa-check-circle"></i>
@@ -122,7 +150,9 @@
             </div>
         </div>
 
-        <button>Commander</button>
+        <div class="commande">
+            <button>Commander</button>
+        </div>
     </section>
 
     <footer>
