--- a/la_note_enchantée.html
+++ b/la_note_enchantée.html
@@ -38,6 +38,8 @@
                     </div>
                     <div class="prixAnim">
                         <span>25€</span>
+                    </div>
+                    <div class="checkAnim">
                         <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
@@ -49,6 +51,8 @@
                     </div>
                     <div class="prixAnim">
                         <span>35€</span>
+                    </div>
+                    <div class="checkAnim">
                         <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
@@ -60,6 +64,8 @@
                     </div>
                     <div class="prixAnim">
                         <span>20€</span>
+                    </div>
+                    <div class="checkAnim">
                         <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
@@ -71,6 +77,8 @@
                     </div>
                     <div class="prixAnim">
                         <span>35€</span>
+                    </div>
+                    <div class="checkAnim">
                         <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
@@ -91,6 +99,8 @@
                     </div>
                     <div class="prixAnim">
                         <span>40€</span>
+                    </div>
+                    <div class="checkAnim">
                         <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
@@ -102,6 +112,8 @@
                     </div>
                     <div class="prixAnim">
                         <span>35€</span>
+                    </div>
+                    <div class="checkAnim">
                         <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
@@ -113,6 +125,8 @@
                     </div>
                     <div class="prixAnim">
                         <span>44€</span>
+                    </div>
+                    <div class="checkAnim">
                         <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
@@ -132,6 +146,8 @@
                     </div>
                     <div class="prixAnim">
                         <span>18€</span>
+                    </div>
+                    <div class="checkAnim">
                         <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
@@ -143,6 +159,8 @@
                     </div>
                     <div class="prixAnim">
                         <span>22€</span>
+                    </div>
+                    <div class="checkAnim">
                         <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
@@ -154,6 +172,8 @@
                     </div>
                     <div class="prixAnim">
                         <span>23€</span>
+                    </div>
+                    <div class="checkAnim">
                         <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
