--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -40,6 +40,8 @@
                     </div>
                     <div class="prixAnim">
                         <span>25€</span>
+                    </div>
+                    <div class="checkAnim">
                         <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
@@ -51,6 +53,8 @@
                     </div>
                     <div class="prixAnim">
                         <span>35€</span>
+                    </div>
+                    <div class="checkAnim">
                         <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
@@ -62,6 +66,8 @@
                     </div>
                     <div class="prixAnim">
                         <span>20€</span>
+                    </div>
+                    <div class="checkAnim">
                         <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
@@ -83,6 +89,8 @@
                     
                     <div class="prixAnim">
                         <span>40€</span>
+                    </div>
+                    <div class="checkAnim">
                         <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
@@ -94,6 +102,8 @@
                     </div>
                     <div class="prixAnim">
                         <span>35€</span>
+                    </div>
+                    <div class="checkAnim">
                         <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
@@ -105,6 +115,8 @@
                     </div>
                     <div class="prixAnim">
                         <span>44€</span>
+                    </div>
+                    <div class="checkAnim">
                         <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
@@ -124,6 +136,8 @@
                     </div>
                     <div class="prixAnim">
                         <span>18€</span>
+                    </div>
+                    <div class="checkAnim">
                         <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
@@ -135,6 +149,8 @@
                     </div>
                     <div class="prixAnim">
                         <span>22€</span>
+                    </div>
+                    <div class="checkAnim">
                         <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
@@ -146,6 +162,8 @@
                     </div>
                      <div class="prixAnim">
                         <span>23€</span>
+                    </div>
+                    <div class="checkAnim">
                         <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
