anim coeur et fadein

--- a/le_délice_des_sens.html
+++ b/le_délice_des_sens.html
@@ -24,14 +24,20 @@
 
     <section class="menu">
 
-        <h1>Le délice des sens<i class="far fa-heart heart"></i></h1>
+        <div class="titreMenu">
+            <h1>Le délice des sens</h1>
+            <div class="coeurResto">
+                <i class="far fa-heart heart"></i>
+                <i class="fas fa-heart heartBg"></i>
+            </div>
+        </div>
 
         <div class="entrees">
             <h2>ENTRÉES</h2>
 
             <div class="blocs">
 
-                <div class="bloc">
+                <div class="bloc bloc1">
                     <div class="infoPlat">
                         <h3>Tartare de thon</h3>
                         <p>Assaisonnée au yuzu</p>
@@ -44,7 +50,7 @@
                     </div>
                 </div>
 
-                <div class="bloc">
+                <div class="bloc bloc2">
                     <div class="infoPlat">
                         <h3>Bouchée de homard croustillant</h3>
                         <p>Et sa farandole de petits légumes</p>
@@ -57,7 +63,7 @@
                     </div>
                 </div>
 
-                <div class="bloc">
+                <div class="bloc bloc3">
                     <div class="infoPlat">
                         <h3>Velouté de cèpes</h3>
                         <p>AAux truffes</p>
