--- a/à_la_française.html
+++ b/à_la_française.html
@@ -24,14 +24,20 @@
 
     <section class="menu">
 
-        <h1>À la française<i class="far fa-heart heart"></i></h1>
+        <div class="titreMenu">
+            <h1>À la française</h1>
+            <div class="coeurResto">
+                <i class="far fa-heart heart"></i>
+                <i class="fas fa-heart heartBg"></i>
+            </div>
+        </div>
 
         <div class="entrees">
             <h2>ENTRÉES</h2>
 
             <div class="blocs">
 
-                <div class="bloc">
+                <div class="bloc bloc1">
                     <div class="infoPlat">
                         <h3>Tartare de pouple acidulé</h3>
                         <p>Aux zests d'orange</p>  
@@ -45,7 +51,7 @@
                     </div>
                 </div>
 
-                <div class="bloc">
+                <div class="bloc bloc2">
                     <div class="infoPlat">
                         <h3>Velouté de légumes d'antan</h3>
                         <p>Carotte, panais, topinambour</p>
@@ -59,7 +65,7 @@
                     </div>
                 </div>
 
-                <div class="bloc">
+                <div class="bloc bloc3">
                     <div class="infoPlat">
                         <h3>Soupe à l'oignon</h3>
                         <p>Revisitée</p>
