--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                         </div>
                         <div class="coeurResto">
                             <i class="far fa-heart heart"></i>
+                            <i class="fas fa-heart heartBg"></i>
                         </div>
                     </div>
                 
@@ -85,6 +86,7 @@
                         </div>
                         <div class="coeurResto">
                             <i class="far fa-heart heart"></i>
+                            <i class="fas fa-heart heartBg"></i>
                         </div>
                     </div>
                 </div>
@@ -100,6 +102,7 @@
                         </div>
                         <div class="coeurResto">
                             <i class="far fa-heart heart"></i>
+                            <i class="fas fa-heart heartBg"></i>
                         </div>
                     </div>
                 </div>
@@ -115,6 +118,7 @@
                         </div>
                         <div class="coeurResto">
                             <i class="far fa-heart heart"></i>
+                            <i class="fas fa-heart heartBg"></i>
                         </div>
                     </div>
                 </div>
