--- a/la_note_enchantée.html
+++ b/la_note_enchantée.html
@@ -24,14 +24,20 @@
 
     <section class="menu">
 
-        <h1>La note enchantée<i class="far fa-heart heart"></i></h1>
+        <div class="titreMenu">
+            <h1>La note enchantée</h1>
+            <div class="coeurResto">
+                <i class="far fa-heart heart"></i>
+                <i class="fas fa-heart heartBg"></i>
+            </div>
+        </div>
 
         <div class="entrees">
             <h2>ENTRÉES</h2>
 
             <div class="blocs">
 
-                <div class="bloc">
+                <div class="bloc bloc1">
                     <div class="infoPlat">
                         <h3>Ravioles de foie gras</h3>
                         <p>Accompagnés de leur crème à la truffe</p>
@@ -44,7 +50,7 @@
                     </div>
                 </div>
 
-                <div class="bloc">
+                <div class="bloc bloc2">
                     <div class="infoPlat">
                         <h3>Caviar osciètre</h3>
                         <p>Sur bini à la farine de blé noir</p>
@@ -57,7 +63,7 @@
                     </div>
                 </div>
 
-                <div class="bloc">
+                <div class="bloc bloc3">
                     <div class="infoPlat">
                         <h3>Homard et espuma de potirons</h3>
                         <p>Mariné aux zests d'orange</p>
