--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -25,15 +25,21 @@
         <img class="imgMenu" src="images\restaurants\jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
 
     <section class="menu">
-
-        <h1>La palette du goût<i class="far fa-heart heart"></i></h1>
+        
+        <div class="titreMenu">
+            <h1>La palette du goût</h1>
+            <div class="coeurResto">
+                <i class="far fa-heart heart"></i>
+                <i class="fas fa-heart heartBg"></i>
+            </div>
+        </div>
 
         <div class="entrees">
             <h3>ENTRÉES</h3>
 
             <div class="blocs">
 
-                <div class="bloc">
+                <div class="bloc bloc1">
                     <div class="infoPlat">
                         <h3>Fricassée d'escargot</h3>
                         <p>Au piment d'espelette</p>
@@ -46,7 +52,7 @@
                     </div>
                 </div>
 
-                <div class="bloc">
+                <div class="bloc bloc2">
                     <div class="infoPlat">
                         <h3>Foie gras de canard mi-cuit</h3>
                         <p>Et ses copeaux de truffe noire</p>
@@ -59,7 +65,7 @@
                     </div>
                 </div>
 
-                <div class="bloc">
+                <div class="bloc bloc3">
                     <div class="infoPlat">
                         <h3>Oeuf au plat</h3>
                         <p>Assaisonné à la truffe sur lit de caviar</p>
@@ -81,7 +87,7 @@
 
             <div class="blocs">
 
-                <div class="bloc">
+                <div class="bloc bloc4">
                     <div class="infoPlat">
                         <h3>Filet de boeuf aux herbes</h3>
                         <p>Accompagné de sa ribambelle de légumes</p>
@@ -95,7 +101,7 @@
                     </div>
                 </div>
 
-                <div class="bloc">
+                <div class="bloc bloc5">
                     <div class="infoPlat">
                         <h3>Parmentier de queue de boeuf</h3>
                         <p>A la truffe noire sur sa purée de panais</p>
@@ -108,7 +114,7 @@
                     </div>
                 </div>
 
-                <div class="bloc">
+                <div class="bloc bloc6">
                     <div class="infoPlat">
                         <h3>Filet de turbot</h3>
                         <p>Aux agrumes</p>
@@ -129,7 +135,7 @@
 
             <div class="blocs">
 
-                <div class="bloc">
+                <div class="bloc bloc7">
                     <div class="infoPlat">
                         <h3>Paris-Brest</h3>
                         <p>Revisité</p>
@@ -142,7 +148,7 @@
                     </div>
                 </div>
 
-                <div class="bloc">
+                <div class="bloc bloc8">
                     <div class="infoPlat">
                         <h3>Macaron au chocolat d'exception</h3>
                         <p>Et glace à la vanille de Madagascar</p>
@@ -155,7 +161,7 @@
                     </div>
                 </div>
 
-                <div class="bloc">
+                <div class="bloc bloc9">
                     <div class="infoPlat">
                         <h3>Mousse au chocolat</h3>
                         <p>Au piment d'espelette et à la truffe noire</p>
