--- a/la_note_enchantée.html
+++ b/la_note_enchantée.html
@@ -32,12 +32,12 @@
             </div>
         </div>
 
-        <div class="entrees">
+        <div class="entrees bloc1">
             <h2>ENTRÉES</h2>
 
             <div class="blocs">
 
-                <div class="bloc bloc1">
+                <div class="bloc">
                     <div class="infoPlat">
                         <h3>Ravioles de foie gras</h3>
                         <p>Accompagnés de leur crème à la truffe</p>
@@ -50,7 +50,7 @@
                     </div>
                 </div>
 
-                <div class="bloc bloc2">
+                <div class="bloc">
                     <div class="infoPlat">
                         <h3>Caviar osciètre</h3>
                         <p>Sur bini à la farine de blé noir</p>
@@ -63,7 +63,7 @@
                     </div>
                 </div>
 
-                <div class="bloc bloc3">
+                <div class="bloc">
                     <div class="infoPlat">
                         <h3>Homard et espuma de potirons</h3>
                         <p>Mariné aux zests d'orange</p>
@@ -93,7 +93,7 @@
         </div>  
         
 
-        <div class="plats">
+        <div class="plats bloc2">
             <h2>PLATS</h2>
 
             <div class="blocs">
@@ -140,7 +140,7 @@
             </div>
         </div>
 
-        <div class="desserts">
+        <div class="desserts bloc3">
             <h2>DESSERTS</h2>
 
             <div class="blocs">
