--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     <title>OhMyFood</title>
 </head>
 <body>
+    <div class="loadingBall">
+        <div class="bounce1"></div>
+        <div class="bounce2"></div>
+        <div class="bounce3"></div>
+    </div>
+
     <header>
         <div class="logo"><img src="images\logo\ohmyfood.png" alt=""></div>
     </header>
