--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -34,12 +34,12 @@
             </div>
         </div>
 
-        <div class="entrees">
+        <div class="entrees bloc1">
             <h3>ENTRÉES</h3>
 
             <div class="blocs">
 
-                <div class="bloc bloc1">
+                <div class="bloc">
                     <div class="infoPlat">
                         <h3>Fricassée d'escargot</h3>
                         <p>Au piment d'espelette</p>
@@ -52,7 +52,7 @@
                     </div>
                 </div>
 
-                <div class="bloc bloc2">
+                <div class="bloc">
                     <div class="infoPlat">
                         <h3>Foie gras de canard mi-cuit</h3>
                         <p>Et ses copeaux de truffe noire</p>
@@ -65,7 +65,7 @@
                     </div>
                 </div>
 
-                <div class="bloc bloc3">
+                <div class="bloc">
                     <div class="infoPlat">
                         <h3>Oeuf au plat</h3>
                         <p>Assaisonné à la truffe sur lit de caviar</p>
@@ -82,12 +82,12 @@
         </div>  
         
 
-        <div class="plats">
+        <div class="plats bloc2">
             <h3>PLATS</h3>
 
             <div class="blocs">
 
-                <div class="bloc bloc4">
+                <div class="bloc">
                     <div class="infoPlat">
                         <h3>Filet de boeuf aux herbes</h3>
                         <p>Accompagné de sa ribambelle de légumes</p>
@@ -101,7 +101,7 @@
                     </div>
                 </div>
 
-                <div class="bloc bloc5">
+                <div class="bloc">
                     <div class="infoPlat">
                         <h3>Parmentier de queue de boeuf</h3>
                         <p>A la truffe noire sur sa purée de panais</p>
@@ -114,7 +114,7 @@
                     </div>
                 </div>
 
-                <div class="bloc bloc6">
+                <div class="bloc">
                     <div class="infoPlat">
                         <h3>Filet de turbot</h3>
                         <p>Aux agrumes</p>
@@ -130,12 +130,12 @@
             </div>
         </div>
 
-        <div class="desserts">
+        <div class="desserts bloc3">
             <h3>DESSERTS</h3>
 
             <div class="blocs">
 
-                <div class="bloc bloc7">
+                <div class="bloc">
                     <div class="infoPlat">
                         <h3>Paris-Brest</h3>
                         <p>Revisité</p>
@@ -148,7 +148,7 @@
                     </div>
                 </div>
 
-                <div class="bloc bloc8">
+                <div class="bloc">
                     <div class="infoPlat">
                         <h3>Macaron au chocolat d'exception</h3>
                         <p>Et glace à la vanille de Madagascar</p>
@@ -161,7 +161,7 @@
                     </div>
                 </div>
 
-                <div class="bloc bloc9">
+                <div class="bloc">
                     <div class="infoPlat">
                         <h3>Mousse au chocolat</h3>
                         <p>Au piment d'espelette et à la truffe noire</p>
@@ -188,7 +188,7 @@
             <a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a>
             <a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a>
             <a href="#">Mentions légales</a>
-            <a href="#">Contact</a>
+            <a href="mailto:dimitripachurka@gmail.com">Contact</a>
         </nav>
     </footer>
 </body>
