--- a/le_délice_des_sens.html
+++ b/le_délice_des_sens.html
@@ -32,12 +32,12 @@
             </div>
         </div>
 
-        <div class="entrees">
+        <div class="entrees bloc1">
             <h2>ENTRÉES</h2>
 
             <div class="blocs">
 
-                <div class="bloc bloc1">
+                <div class="bloc">
                     <div class="infoPlat">
                         <h3>Tartare de thon</h3>
                         <p>Assaisonnée au yuzu</p>
@@ -50,7 +50,7 @@
                     </div>
                 </div>
 
-                <div class="bloc bloc2">
+                <div class="bloc">
                     <div class="infoPlat">
                         <h3>Bouchée de homard croustillant</h3>
                         <p>Et sa farandole de petits légumes</p>
@@ -63,7 +63,7 @@
                     </div>
                 </div>
 
-                <div class="bloc bloc3">
+                <div class="bloc">
                     <div class="infoPlat">
                         <h3>Velouté de cèpes</h3>
                         <p>AAux truffes</p>
@@ -80,7 +80,7 @@
         </div>  
         
 
-        <div class="plats">
+        <div class="plats bloc2">
             <h2>PLATS</h2>
 
             <div class="blocs">
@@ -127,7 +127,7 @@
             </div>
         </div>
 
-        <div class="desserts">
+        <div class="desserts bloc3">
             <h2>DESSERTS</h2>
 
             <div class="blocs">
