--- a/à_la_française.html
+++ b/à_la_française.html
@@ -32,12 +32,12 @@
             </div>
         </div>
 
-        <div class="entrees">
+        <div class="entrees bloc1">
             <h2>ENTRÉES</h2>
 
             <div class="blocs">
 
-                <div class="bloc bloc1">
+                <div class="bloc">
                     <div class="infoPlat">
                         <h3>Tartare de pouple acidulé</h3>
                         <p>Aux zests d'orange</p>  
@@ -51,7 +51,7 @@
                     </div>
                 </div>
 
-                <div class="bloc bloc2">
+                <div class="bloc">
                     <div class="infoPlat">
                         <h3>Velouté de légumes d'antan</h3>
                         <p>Carotte, panais, topinambour</p>
@@ -65,7 +65,7 @@
                     </div>
                 </div>
 
-                <div class="bloc bloc3">
+                <div class="bloc">
                     <div class="infoPlat">
                         <h3>Soupe à l'oignon</h3>
                         <p>Revisitée</p>
@@ -83,7 +83,7 @@
         </div>  
         
 
-        <div class="plats">
+        <div class="plats bloc2">
             <h2>PLATS</h2>
 
             <div class="blocs">
@@ -133,7 +133,7 @@
             </div>
         </div>
 
-        <div class="desserts">
+        <div class="desserts bloc3">
             <h2>DESSERTS</h2>
 
             <div class="blocs">
