modifs responsive + semantique

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
     </section>
 
-    <div class="fonctionnement">
+    <section class="fonctionnement">
         <h2>Fonctionnement</h2>
         <div class="blocsFonc">
             <div class="blocFonc">
@@ -58,9 +58,9 @@
                 <h3><i class="fas fa-store"></i>Dégustez au restaurant</h3>
             </div>
         </div>
-    </div>
+    </section>
 
-    <div id="restaurants">
+    <section id="restaurants">
         <h2>Restaurants</h2>
         <div class="cards">
             
@@ -150,7 +150,7 @@
                         </div>
                 </div>
             </div>
-    </div>
+    </section>
     
         <footer>
             <h2>ohmyfood</h2>
